--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Duel Times</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="app">
+      <div id="game-container"></div>
+    </div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
