--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <div id="game-container"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <script async defer src="https://scripts.withcabin.com/hello.js"></script>
   </body>
 </html>
