Fixed auto scaling of the canvas

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Duel Times</title>
   </head>
   <body>
-    <div id="app">
-      <div id="game-container"></div>
-    </div>
+    <div id="phaser-world"></div>
     <script type="module" src="/src/main.ts"></script>
     <script async defer src="https://scripts.withcabin.com/hello.js"></script>
   </body>
